# yolov5ncnn

./: CMakeLists.txt  README.md  main.cpp  repvgg-opt.param  yolov5s-opt.param
